feat: switch to app dir (#58)

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@chakra-ui/react": "^2.4.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@next/font": "^13.0.6",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.7.1",
     "@stripe/react-stripe-js": "^1.16.0",
     "@stripe/stripe-js": "^1.46.0",
@@ -26,20 +25,21 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/uniqid": "^5.3.2",
-    "@vercel/analytics": "^0.1.5",
+    "@vercel/analytics": "^1.1.1",
+    "aws-crt": "^1.18.1",
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "framer-motion": "^7.6.19",
+    "framer-motion": "^10.16.4",
     "image-blob-reduce": "^4.1.0",
     "jszip": "^3.10.1",
     "keen-slider": "^6.8.5",
     "mjml": "^4.13.0",
     "mjml-react": "^2.0.8",
-    "next": "13.0.6",
-    "next-auth": "^4.18.0",
-    "next-s3-upload": "^0.2.8",
+    "next": "13.5.6",
+    "next-auth": "^4.24.3",
+    "next-s3-upload": "^0.3.3",
     "nodemailer": "^6.9.0",
     "openai": "^3.1.0",
     "plaiceholder": "^2.5.0",
@@ -48,7 +48,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
-    "react-medium-image-zoom": "^5.1.2",
+    "react-medium-image-zoom": "^5.1.8",
     "react-parallax-tilt": "^1.7.77",
     "react-query": "^3.39.2",
     "sharp": "^0.31.2",
