feat: switch to flux (#63)

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "next-auth": "^4.24.3",
     "next-s3-upload": "^0.3.3",
     "nodemailer": "^6.9.0",
-    "openai": "^3.1.0",
+    "openai": "^4.75.0",
     "plaiceholder": "^2.5.0",
     "react": "18.2.0",
     "react-advanced-cropper": "^0.17.0",
@@ -51,6 +51,7 @@
     "react-medium-image-zoom": "^5.1.8",
     "react-parallax-tilt": "^1.7.77",
     "react-query": "^3.39.2",
+    "replicate": "^1.0.1",
     "sharp": "^0.31.2",
     "smartcrop-sharp": "^2.0.6",
     "stripe": "^11.1.0",
